[tool.poetry]
name = "homework-4-4"
version = "0.1.0"
description = ""
authors = ["Alexey Melnikov <stariy.melnik07@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_4"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
